# pymetis

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  Makefile.in  README  README.rst  aksetup_helper.py  import-metis.sh  meson.build  meson_options.txt  metis.patch  pyproject.toml  requirements.txt  setup.cfg  setup.py  siteconf.py.in
.basedpyright/: baseline.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  wheels.yml
doc/: conf.py  functionality.rst  index.rst  misc.rst  options.rst  upload-docs.sh
doc/_static/: tiny_01.drawio  tiny_01_partitioned.drawio
images/: README
pymetis/: __init__.py  _internal.pyi  metis.py  version.py
pymetis/metis/: CType.py  DebugLevel.py  GType.py  IPType.py  OPType.py  ObjType.py  OptionKey.py  PType.py  RType.py  Status.py  __init__.py
src/gklib/: GKlib.h  dlmalloc.c  error.c  gk_externs.h  memory.c
src/metis/: metis.h  metislib.h
src/metis/GKlib/: CMakeLists.txt  GKlibConfig.cmake.in  LICENSE.txt  README.md
src/metis/GKlib/apps/: CMakeLists.txt  cmpnbrs.c  csrcnv.c  gkgraph.c  gkrw.c  gkuniq.c  grKx.c  m2mnbrs.c  splatt2svd.c
src/metis/GKlib/cmake/: GKlibSystem.cmake
src/metis/GKlib/include/: GKlib.h
src/metis/GKlib/scripts/: gexpand.pl
src/python/: __init__.py
src/wrapper/: wrapper.cpp
test/: test_metis.py  test_partition_mesh.py  test_partition_tetrahedral_mesh.py
